--- a/views/index.html
+++ b/views/index.html
@@ -44,7 +44,7 @@
     <p class="list-group-item-text"> PHP apps containerization and deployment </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
+  <a href="python-flask" class="list-group-item">
   <h4 class="list-group-item-heading"> Python Flask blog </h4>
     <p class="list-group-item-text"> Blogging app written along with API </p>
   </a>
