--- a/views/python-flask.html
+++ b/views/python-flask.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Single page web app using Angularjs</title>
+<title> Flask blogging app  </title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -32,43 +32,43 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Post Title</h1>
+        <h1 class="mt-4">Flask blogging app</h1>
 
         <!-- Author -->
-        <p class="lead">
-          by
-          <a href="#">Start Bootstrap</a>
-        </p>
+        <h2>  <a href="flaskr.cheapestdomainever.club"> Check it out </a> </h2>
 
         <hr>
 
-        <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
-
-        <hr>
+	<br>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <p class="lead"> This is a study project on python app development tools and practices using flask and flaskr-tdd tutorial. I worked through the tutorial step by step and have working flask app. </p>
+        <img class="img-fluid rounded" src="flaskr1-1.png" alt="">
+        <hr>
+
+        <p class="lead"> In this app you are supposed to log in using hardcoded credentials, since there is no database associated with it. You would log in using "admin - admin" login password pair, after that you may leave posts. </p>
+
+        <img class="img-fluid rounded" src="flaskr2.png" alt="">
 
         <hr>
 
-        <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
+        <img class="img-fluid rounded" src="flaskr3.png" alt="">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
+	<hr>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
+        <p class="lead"> Whenever you add a new entry, it is shown under the form, along with other entries. If you log out, all the entries would be shown on the main page.</p>
 
-        <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
-          </footer>
-        </blockquote>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
+        <img class="img-fluid rounded" src="flaskr6.png" alt="">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
+        <p class="lead"> If you log out, all the entries would be shown on the main page.</p>
+
+        <hr>
+        <p class="lead"> The entries are kept until the reload of the app.</p>
+
+
+        <img class="img-fluid rounded" src="flaskr5.png" alt="">
+
 
         <hr>
 
