--- a/views/index.html
+++ b/views/index.html
@@ -82,9 +82,9 @@
     <p class="list-group-item-text"> Not implemented </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/jquery" class="list-group-item">
   <h4 class="list-group-item-heading"> JQuery </h4>
-    <p class="list-group-item-text"> Not implemented </p>
+    <p class="list-group-item-text"> Landing page project for a friend usind JQuery, php and postfix. </p>
   </a>
 
 </div>
