--- a/views/rvproxy.html
+++ b/views/rvproxy.html
@@ -36,7 +36,7 @@
 
         <!-- Author -->
         <p class="lead">
-          <a href="#"> Source </a>
+          <a href="https://github.com/mikefrostov/rvproxy"> Source </a>
         </p>
 
 
