--- a/views/index.html
+++ b/views/index.html
@@ -267,7 +267,7 @@
   </a>
 
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/kubernetes" class="list-group-item">
   <h4 class="list-group-item-heading"> Kubernetes </h4>
     <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Ingress...  </p>
   </a>
