main page restructured

--- a/views/index.html
+++ b/views/index.html
@@ -44,42 +44,14 @@
     <p class="list-group-item-text"> Blogging app written along with API </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Python Django App </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Python Flask-based microservices app </h4>
-    <p class="list-group-item-text"> Development, infrastructure deployment and management project </p>
-  </a>
-
   <a href="/sitik" class="list-group-item">
   <h4 class="list-group-item-heading">Front-end playground</h4>
     <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> MEAN stack </h4>
-    <p class="list-group-item-text"> Mongodb Expressjs Angular Nodejs </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> MERN stack </h4>
-    <p class="list-group-item-text"> Reactjs app </p>
-  </a>
-
-
   <a href="/koareact" class="list-group-item">
   <h4 class="list-group-item-heading"> KRPN stack </h4>
     <p class="list-group-item-text"> Koajs Reactjs Postgres Nodejs to-do app </p>
-  </a>
-
-
-    <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> VueJS </h4>
-    <p class="list-group-item-text"> Not implemented </p>
   </a>
 
   <a href="/jquery" class="list-group-item">
@@ -98,96 +70,13 @@
     <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
   </a>
 
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">Teamcity</h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
+  <a href="/gitlabci" class="list-group-item">
   <h4 class="list-group-item-heading">GitlabCI</h4>
-    <p class="list-group-item-text"> Not implemented yet</p>
-  </a>
-
-    <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">Bamboo</h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-<h4 class="list-group-item-heading">TravisCI</h4>
-  <p class="list-group-item-text"> Not implemented yet </p>
-</a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> CircleCI </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> GoCD </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-</div>
-
-<br>
-
-
-<h3> Build tools </h3>
-<div class="list-group">
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">make</h4>
-    <p class="list-group-item-text"> Makefiles c/c++ gcc build-utils etc</p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">Cmake</h4>
-    <p class="list-group-item-text"> crossplatform make</p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">Packaging </h4>
-    <p class="list-group-item-text"> Deb, rpm, pip, npm</p>
-  </a>
-
-    <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">ant, maven, gradle</h4>
-    <p class="list-group-item-text"> Java build systems</p>
-  </a>
-
-    <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Gulp, webpack, babel, uglifier, grunt </h4>
-    <p class="list-group-item-text"> JavaScript build tools</p>
-  </a>
-</div>
-
-
-<h3> Qa Automation </h3>
-<div class="list-group">
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">Python</h4>
-    <p class="list-group-item-text"> Pytest, unittest, allure, fixtures, REST api testing </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading">JavaScript</h4>
-    <p class="list-group-item-text"> Mocha, Cucumber </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Selenium </h4>
-    <p class="list-group-item-text"> A bit of Java + webdriver  </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Performance testing </h4>
-    <p class="list-group-item-text"> Loadrunner, Locust, JMeter  </p>
+    <p class="list-group-item-text"> Continious integration, docker registry, runners - all in one </p>
   </a>
 
 
 </div>
-
 
 <br>
 
@@ -199,10 +88,12 @@
     <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
-    <h4 class="list-group-item-heading"> Zabbix </h4>
-      <p class="list-group-item-text"> LAMP-based monitoring tools </p>
+  <a href="/prometheus" class="list-group-item">
+  <h4 class="list-group-item-heading"> Prometheus </h4>
+    <p class="list-group-item-text"> Infrastructure metrcis using prometheus </p>
   </a>
+
+
 </div>
 
 <br>
@@ -213,6 +104,13 @@
   <h4 class="list-group-item-heading">Bare-metal home lab</h4>
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
+
+  <a href="/nas" class="list-group-item">
+  <h4 class="list-group-item-heading"> NAS </h4>
+    <p class="list-group-item-text"> Network attached storage </p>
+  </a>
+
+
 
   <a href="ftp://cheapestdomainever.club" class="list-group-item">
   <h4 class="list-group-item-heading">File server</h4>
@@ -225,24 +123,14 @@
   </a>
 
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/elk" class="list-group-item">
   <h4 class="list-group-item-heading"> ELK </h4>
     <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/ansible" class="list-group-item">
   <h4 class="list-group-item-heading"> Ansible </h4>
     <p class="list-group-item-text"> Configuration management </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> RabbitMQ </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Celery </h4>
-    <p class="list-group-item-text"> Not implemented </p>
   </a>
 
 </div>
@@ -251,7 +139,7 @@
 
 <h3> Big Data </h3>
 <div class="list-group">
-    <a href="#" class="list-group-item disabled">
+    <a href="/hadoop" class="list-group-item">
   <h4 class="list-group-item-heading"> Hadoop  </h4>
     <p class="list-group-item-text"> HDFS YARN MapReduce. Big data study projects </p>
   </a>
@@ -261,68 +149,40 @@
 
 <h3> Cloud technologies and virtualization </h3>
 <div class="list-group">
-  <a href="/#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> IaC </h4>
-    <p class="list-group-item-text"> Cloud infrastructure </p>
+  <a href="/iac" class="list-group-item">
+  <h4 class="list-group-item-heading"> Google Cloud </h4>
+    <p class="list-group-item-text"> Cloud infrastructure using google cloud </p>
   </a>
 
 
   <a href="/kubernetes" class="list-group-item">
   <h4 class="list-group-item-heading"> Kubernetes </h4>
-    <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Ingress...  </p>
+    <p class="list-group-item-text"> DaemonSets, ReplicaSets, StatelessSets, Deployments, Helm charts, Ingress  </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> OpenShift </h4>
-    <p class="list-group-item-text"> Not Implemented yet  </p>
-  </a>
-
-
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> OpenStack </h4>
-    <p class="list-group-item-text"> Not Implemented yet  </p>
-  </a>
-
-
-  <a href="#" class="list-group-item disabled">
+  <a href="/docker" class="list-group-item">
   <h4 class="list-group-item-heading"> Docker </h4>
     <p class="list-group-item-text"> DockerHub, builds, images registry, networking </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/virtualization" class="list-group-item">
   <h4 class="list-group-item-heading"> Virtual Machines </h4>
     <p class="list-group-item-text"> KVM+Libvirt, Virtualbox </p>
   </a>
 
-  <a href="#" class="list-group-item disabled">
+  <a href="/vagrant" class="list-group-item">
   <h4 class="list-group-item-heading"> Vagrant </h4>
     <p class="list-group-item-text"> Vagrantfiles, provisioning with ansible </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Packer </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Vault </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Consul </h4>
-    <p class="list-group-item-text"> Not implemented </p>
   </a>
 
 
 </div>
 
-<h3> Databases administration </h3>
+<h3> Databases </h3>
 <div class="list-group">
-  <a href="/#" class="list-group-item disabled">
+  <a href="/sqlite" class="list-group-item">
   <h4 class="list-group-item-heading"> SQLite </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
+    <p class="list-group-item-text"> Plain and simple database solution for development </p>
   </a>
 
   <a href="/postgres" class="list-group-item">
@@ -330,40 +190,9 @@
     <p class="list-group-item-text"> Sharding, replication, containerization </p>
   </a>
 
-    <a href="/#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> mariadb/mysql  </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-    <a href="/#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Redis </h4>
-    <p class="list-group-item-text"> Not implemented yet </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Cassandra </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Giraph </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Riak </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> Mongodb </h4>
-    <p class="list-group-item-text"> Not implemented </p>
-  </a>
-
-  <a href="#" class="list-group-item disabled">
-  <h4 class="list-group-item-heading"> InfluxDB </h4>
-    <p class="list-group-item-text"> Not implemented </p>
+    <a href="/mysql" class="list-group-item">
+  <h4 class="list-group-item-heading"> mariadb, mysql  </h4>
+    <p class="list-group-item-text"> Good old database solution </p>
   </a>
 
 </div>
