--- a/views/python-flask.html
+++ b/views/python-flask.html
@@ -64,7 +64,7 @@
         <p class="lead"> If you log out, all the entries would be shown on the main page.</p>
 
         <hr>
-        <p class="lead"> The entries are kept until the reload of the app.</p>
+        <p class="lead"> The entries are kept in a SQLite database.</p>
 
 
         <img class="img-fluid rounded" src="flaskr5.png" alt="">
