--- a/views/prometheus.html
+++ b/views/prometheus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Single page web app using Angularjs</title>
+<title>Monitoring with prometheus</title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -32,44 +32,53 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Post Title</h1>
+        <h1 class="mt-4"> Prometheus infrastructure metrics </h1>
 
-        <!-- Author -->
-        <p class="lead">
-          by
-          <a href="#">Start Bootstrap</a>
-        </p>
 
         <hr>
 
-        <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
+	<p class="lead"> Prometheus is a highly capable monitoring tool that assembles metrics and pushes them to a consumer. It may be used for just about anything you could think of. It has quite big community that develops exporters for a number of projects. Nodejs, php, linux machines etc. </p>
+
+	
+
+	<p class="lead"> In my infrastructure I use node exporters for my bare-metal nodes, nodejs exporter for one of the apps and for the kubernetes cluster running inside of the VirtualBox vms. The consumer of the metrics is Grafana.  </p>
+
+
+	<p class="lead"> Prometheus instances are added as data sources in grafana </p> 
+        <img class="img-fluid rounded" src="prom_ds.png" style="width:1000px;height:500px;" alt="">
+
 
         <hr>
 
-        <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+         
+
+	<img class="img-fluid rounded" src="prometheus-node-exporter1.png" style="width:500px;height:200px;" alt="">
+	
+	
+	<img class="img-fluid rounded" src="prometheus-node-exporter2.png" style="width:500px;height:600px;" alt="">
+	
+	<hr> 
+
+	<p class="lead"> Kubernetes has its own prometheus instance running inside of the cluster and is added as another data source to grafana.  </p>
+
+	<img class="img-fluid rounded" src="kubeprometheus.png" style="width:1000px;height:500px;" alt="">
+	
+        <hr>
+        
+        <p class="lead"> Prometheus targets may be observed through NodePort export to external ips of Nodes. </p>
+
+
+	<img class="img-fluid rounded" src="kubeprometheus2.png" style="width:1000px;height:500px;" alt="">
+        <hr>
+        <p class="lead"> Grafana dashboard shows the kubernetes statistics.  </p>
+
+
+        <img class="img-fluid rounded" src="kubegrafana.png" style="width:1000px;height:500px;" alt="">
+
 
         <hr>
 
         <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-        <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
-          </footer>
-        </blockquote>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
-
         <hr>
 
 
