--- a/views/docker.html
+++ b/views/docker.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Single page web app using Angularjs</title>
+<title> Docker </title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.3/angular-route.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -32,47 +32,32 @@
       <div class="col-lg-8">
 
         <!-- Title -->
-        <h1 class="mt-4">Post Title</h1>
-
-        <!-- Author -->
-        <p class="lead">
-          by
-          <a href="#">Start Bootstrap</a>
-        </p>
-
+        <h1 class="mt-4"> Docker </h1>
         <hr>
-
-        <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
-
-        <hr>
+        <p class="lead"> Docker for DevOps is bread and butter. I have been using it extensively throughout my career. Right now I contatinerize all my apps and projects so they could run 24/7 on one PC with no hassle. </p>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+        <img class="img-fluid rounded" src="containers1.png" style="width:1200px;height:110px;" alt="">
+	<br>
+	<hr>
+        <p class="lead"> I upped docker container with a reverse proxy that manages all incoming connections and distributes them with respected ports. Each container lives on it's own port. Grafana is served on 3000, web apps are served on ports starting 8080. </p>
 
         <hr>
+
+        <p class="lead"> I use docker as an engine for Kubernetes orchestration cluster system. Sometimes the expertise with docker engine really helps troubleshooting kubernetes problems with pods. </p>
+	<img class="img-fluid rounded" src="kubernetes2.png" style="width:800px;height:500px;" alt="">
 
         <!-- Post Content -->
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum minus inventore?</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus, voluptatibus.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis. Enim, iure!</p>
-
-        <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer class="blockquote-footer">Someone famous in
-            <cite title="Source Title">Source Title</cite>
-          </footer>
-        </blockquote>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae? Qui, necessitatibus, est!</p>
 
         <hr>
 
+        <p class="lead"> Sometimes I use docker-compose for web apps that I work on. This tool helps quickly setup the environment for development. I may spin up a database or a monitoring tool such as prometheus or grafana or whatever is necessery. </p>
 
+	<img class="img-fluid rounded" src="nodejs_blogapp.png" style="width:800px;height:400px;" alt="">
+
+	<hr>
+        
+	<img class="img-fluid rounded" src="docker-compose.png" style="width:700px;height:400px;" alt="">
 
 </div>
 </body>
