koareact app page fixes

--- a/views/koareact.html
+++ b/views/koareact.html
@@ -45,25 +45,40 @@
 
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="koareact.png" alt="">
+        <img class="img-fluid rounded" src="koareact.png" style="width:700px;height:400px;" alt="">
         <!-- Post Content -->
         <hr>
 	<p class="lead"> This project is a job interview task where I had to implement a sort of a to-do CRUD app using only koa modules, postgres and react. Even though the project is rather simple and straight forward, it took me about a week and a half to figure out all the bits and pieces. I took other people's work as a starting point, since I had no previous experience using these technologies or prior experience in building REST api at all, especially using JavaScript and its frameworks. </p>
-  <p class="lead"> Main references are: </p>
+
+	
+	<p class="lead"> A very helpful nodejs module is nodemon. What it does, it basically reloads the server each time the code is changed (not always though, sometimes I had to reload it manually cuz of changes in server.js, nevertheless it is helpful in all other instances) </p>
+
+	
+        <img class="img-fluid rounded" src="npmwatch.png" style="width:700px;height:600px;" alt="">
+        <hr>
+        <p class="lead"> For troubleshooting the REST API of my app I had to use POSTMAN at some point. It is very helpful and flexible, you can tailor the request easily to see the behavior of the REST API server. </p>
+
+	<img class="img-fluid rounded" src="postman.png" style="width:700px;height:400px;" alt="">
+
+	<p class="lead">  </p>
+	
+	
+	
+     <p class="lead"> Main references are: </p>
     <ul>
       <li> https://medium.com/@olinations/build-a-crud-template-using-react-bootstrap-express-postgres-9f84cc444438 </li>
       <li> https://medium.com/hackernoon/serving-react-and-koa-together-720ba6668298 </li>
       <li> https://www.youtube.com/watch?v=o7gVHMg_jdY </li>
     </ul>
-  <p class="lead"> If any one of these people are reading, I am very grateful to you, guys. These really helped me to figure what the heck's happening in JavaScript world :) </p>
-    <p class="lead">These are not the only places where I scavanged across, I really had to do some googling.</p>
+  <p class="lead"> I am very grateful to these guys. They really helped me to get up to speed with all this modern JavaScript magic, I loved it. </p>
+    <p class="lead">These are not the only places that I used as a reference. I scavanged across multitude of sources before I understood how it is done.</p>
 
 
 
-        <p class="lead"> The cards from trello really show the amount of problems I had to deal with. Each comment is a link to some tutoral or stackoverflow or other reference. </p>
+        <p class="lead"> The trello cards really got some beating, each comment here contains a link to some article about react, koa or misc problems. </p>
         <img class="img-fluid rounded" src="reference1.png" alt="">
 <hr>
-        <p class="lead"> Overall, I had to figure migrations, React Components, koa router, koa mounts and how to build a react project and God knows what else. This was a great experience and a lot of stuff started to look clear after completing the task.
+        <p class="lead"> I had to figure out migrations, React Components, koa router, koa mounts and how to build a react project, serve it statically after build. CORS (had no idea what that was before), koa-routes etc, etc... This was a great experience, I learned a lot, this stuff is now clear to me.
 
 
         <hr>
