Python Linked-list page

--- a/views/about.html
+++ b/views/about.html
@@ -19,18 +19,7 @@
 <div class="container">
 <div class="row">
 <div class="col-lg-8">
-  <p class="lead">
-    I am an aspiring DevOps engineer that wants to conquire the world. Now who doesn't?
-    My core competencies are following:
-  </p>
-  <ul>
-	  <li> Linux System Administration </li>
-	  <li> Networking </li>
-	  <li> Python and Bash scripting </li>
-	  <li> Cloud technologies </li>
-	  <li> Web Programming on JavaScript, Nodejs, React </li>
- </ul>
-
+	<p class="lead"> <a href="http://mikefrostov.github.io/Bio/">http://mikefrostov.github.io/Bio</a> </p>
 
 </div>
 </div>
