--- a/views/index.html
+++ b/views/index.html
@@ -147,6 +147,8 @@
 </div>
 
 <h3> Databases </h3>
+<div class="list-group">
+
   <a href="/postgres" class="list-group-item">
   <h4 class="list-group-item-heading"> Postgresql  </h4>
     <p class="list-group-item-text"> Sharding, replication, containerization </p>
@@ -154,6 +156,17 @@
 
 </div>
 
+
+
+<h3> Programming </h3>
+<div class="list-group">
+
+  <a href="/python-linked" class="list-group-item">
+  <h4 class="list-group-item-heading"> "MyList" linked-list implementation using python3  </h4>
+    <p class="list-group-item-text"> Python Core programming project with unittests </p>
+  </a>
+
+</div>
 
 </div></div>
 </div>
