disabled unfinished post

--- a/views/index.html
+++ b/views/index.html
@@ -110,7 +110,7 @@
   </a>
 
 
-  <a href="/elk" class="list-group-item">
+  <a href="#" class="list-group-item disabled">
   <h4 class="list-group-item-heading"> ELK </h4>
     <p class="list-group-item-text"> elasticsearch logstash kibana project </p>
   </a>
