new domain name

--- a/views/grafana.html
+++ b/views/grafana.html
@@ -33,7 +33,7 @@
 
         <!-- Title -->
         <h1 class="mt-4">Infrastructure monitoring</h1>
-        <h2><a href="http://grafana.cheapestdomainever.club/"> Login page</a></h2>
+        <h2><a href="http://grafana.morozovme.com/"> Login page</a></h2>
 
 
         <hr>
