--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
 
   <a href="/nodejs-blogapp" class="list-group-item">
   <h4 class="list-group-item-heading"> Nodejs blog app </h4>
-    <p class="list-group-item-text"> blog.cheapestdomainever.club</p>
+    <p class="list-group-item-text"> blog.morozovme.com</p>
   </a>
 
   <a href="python-flask" class="list-group-item">
@@ -46,7 +46,7 @@
 
   <a href="/sitik" class="list-group-item">
   <h4 class="list-group-item-heading">Front-end playground</h4>
-    <p class="list-group-item-text"> sitik.cheapestdomainever.club </p>
+    <p class="list-group-item-text"> sitik.morozovme.com </p>
   </a>
 
   <a href="/koareact" class="list-group-item">
@@ -67,7 +67,7 @@
 <div class="list-group">
   <a href="/jenkins" class="list-group-item">
   <h4 class="list-group-item-heading">Jenkins</h4>
-    <p class="list-group-item-text"> jenkins.cheapestdomainever.club </p>
+    <p class="list-group-item-text"> jenkins.morozovme.com </p>
   </a>
 
 </div>
@@ -79,7 +79,7 @@
 <div class="list-group">
   <a href="/grafana" class="list-group-item">
   <h4 class="list-group-item-heading">Grafana</h4>
-    <p class="list-group-item-text"> grafana.cheapestdomainever.club </p>
+    <p class="list-group-item-text"> grafana.morozovme.com </p>
   </a>
 
   <a href="/prometheus" class="list-group-item">
@@ -99,14 +99,14 @@
     <p class="list-group-item-text">Infrastructure description</p>
   </a>
 
-  <a href="ftp://cheapestdomainever.club" class="list-group-item">
+  <a href="ftp://morozovme.com" class="list-group-item">
   <h4 class="list-group-item-heading">File server</h4>
-    <p class="list-group-item-text"> ftp://cheapestdomainever.club </p>
+    <p class="list-group-item-text"> ftp://morozovme.com </p>
   </a>
 
   <a href="/rvproxy" class="list-group-item">
   <h4 class="list-group-item-heading"> Nginx Reverse proxy </h4>
-    <p class="list-group-item-text"> Runs on cheapestdomainever.club:80 </p>
+    <p class="list-group-item-text"> Runs on morozovme.com:80 </p>
   </a>
 
 
