--- a/views/jquery.html
+++ b/views/jquery.html
@@ -37,7 +37,7 @@
 
         <!-- Author -->
 
-	<h2><a href="http://oroneon.cheapestdomainever.club/"> Check it out </a></h2>
+	<h2><a href="http://oroneon.morozovme.com/"> Check it out </a></h2>
 	<hr>
 	<h4><a href="http://github.com/mikefrostov/rosh">See the Repository</a></h4>
 
