--- a/views/koareact.html
+++ b/views/koareact.html
@@ -37,7 +37,7 @@
 
         <!-- Author -->
 
-	<h2><a href="http://koareact.cheapestdomainever.club/"> Check it out </a></h2>
+	<h2><a href="http://koareact.morozovme.com/"> Check it out </a></h2>
 	<hr>
 	<h4><a href="http://github.com/mikefrostov/koa_app2">See the Repository</a></h4>
 
