--- a/views/python-flask.html
+++ b/views/python-flask.html
@@ -35,7 +35,7 @@
         <h1 class="mt-4">Flask blogging app</h1>
 
         <!-- Author -->
-        <h2>  <a href="http://flaskr.cheapestdomainever.club/"> Check it out </a> </h2>
+        <h2>  <a href="http://flaskr.morozovme.com/"> Check it out </a> </h2>
 
         <hr>
 
