--- a/views/sitik.html
+++ b/views/sitik.html
@@ -36,7 +36,7 @@
 
         <!-- Author -->
         <p class="lead">
-          <h2><a href="http://sitik.cheapestdomainever.club/">Check it out</a></h2>
+          <h2><a href="http://sitik.morozovme.com/">Check it out</a></h2>
         </p>
         <hr>
         <br>
