--- a/views/jenkins.html
+++ b/views/jenkins.html
@@ -36,7 +36,7 @@
 
         <!-- Author -->
 
-        <h2><a href="http://jenkins.cheapestdomainever.club/">Login page</a></h2>
+        <h2><a href="http://jenkins.morozovme.com/">Login page</a></h2>
 
 
         <hr>
