--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="about.css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -20,9 +21,121 @@
 <div class="row">
 <div class="col-lg-8">
 	<p class="lead"> <a href="http://mikefrostov.github.io/Bio/">http://mikefrostov.github.io/Bio</a> </p>
+  
+</div>
 
 </div>
+
 </div>
+<div class="container">
+  <h1>Skill Set</h1>
+  <div class="bar front expert" data-skill="English"></div>
+  <div class="bar front expert" data-skill="Russian"></div>
+  <div class="bar front learning" data-skill="Azure"></div>
+ 
+  <div class="bar front intermediate" data-skill="AWS"></div>
+  <div class="bar front expert" data-skill="DevOps"></div>
+  <div class="bar front intermediate" data-skill="Linux"></div>
+  <div class="bar back intermediate" data-skill="Testing"></div>
+
+  <div class="bar back advanced" data-skill="Python"></div>
+  <div class="bar back basic" data-skill="Rust"></div>
+ 
+  <div class="bar back basic" data-skill="Java"></div>
+  <div class="bar back basic" data-skill="JavaScript"></div>
+  <div class="bar back basic" data-skill="ReactJS"></div>
+  <div class="bar back basic" data-skill="NodeJS"></div>
+  
+  <div class="bar back learning" data-skill="C"></div>
+  <div class="bar back newbie" data-skill="asm"></div>
+  <div class="bar back newbie" data-skill="VHDL"></div>
+  <div class="bar learning" data-skill="Solidity"></div>
+  <div class="bar learning" data-skill="C++"></div>
+  <div class="bar learning" data-skill="C#"></div>
+  <div class="bar back newbie" data-skill="PHP"></div>
+  <div class="bar back basic" data-skill="CSS3"></div>
+  <div class="bar back basic" data-skill="HTML5"></div>
+  <div class="bar learning" data-skill="Selenium"></div>
+
+
 </div>
+<style> body{
+  font-family: Helvetica, Arial, sans-serif;
+}
+.container{
+  width: 50%;
+  margin: 0 auto;
+}
+@keyframes load{
+  from {
+    width: 0%
+  }
+}
+@-webkit-keyframes load{
+  from {
+    width: 0%
+  }
+}
+@-moz-keyframes load{
+  from {
+    width: 0%
+  }
+}
+@-o-keyframes load{
+  from {
+    width: 0%
+  }
+}
+
+.bar{
+  background-color: #EEE;
+  padding: 2px;
+  border-radius: 15px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  color: #FFF;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+}
+.bar::before{
+  content:  attr(data-skill);
+  background-color: #f3b0ff;
+  display: inline-block;
+  padding: 5px 0 5px 10px;
+  border-radius: inherit;
+  animation: load 2s 0s;
+  -webkit-animation: load 2s 0s;
+  -moz-animation: load 2s 0s;
+  -o-animation: load 2s 0s;
+}
+
+.bar.front::before{
+  background-color: #ffcc33;
+}
+.bar.back::before{
+  background-color: #a6cfe3;
+}
+
+.bar.newbie::before{
+  width: calc(10% - 10px);
+}
+
+.bar.learning::before{
+  width: calc(20% - 10px);
+}
+.bar.basic::before{
+  width: calc(40% - 10px);
+}
+.bar.intermediate::before{
+  width: calc(60% - 10px);
+}
+.bar.advanced::before{
+  width: calc(80% - 10px);
+}
+.bar.expert::before{
+  width: calc(100% - 10px);
+}
+ </style>
+ </br></br></br>
 </body>
 </html>
