--- a/views/about.html
+++ b/views/about.html
@@ -36,26 +36,32 @@
   <div class="bar front intermediate" data-skill="AWS"></div>
   <div class="bar front expert" data-skill="DevOps"></div>
   <div class="bar front intermediate" data-skill="Linux"></div>
-  <div class="bar back intermediate" data-skill="Testing"></div>
+  <div class="bar front intermediate" data-skill="GitlabCI"></div>
+  <div class="bar front intermediate" data-skill="Jenkins"></div>
+  <div class="bar front intermediate" data-skill="Testing"></div>
 
-  <div class="bar back advanced" data-skill="Python"></div>
-  <div class="bar back basic" data-skill="Rust"></div>
+  <div class="bar front advanced" data-skill="Python"></div>
+  <div class="bar front basic" data-skill="Ruby"></div>
+  <div class="bar newbie" data-skill="Solidity"></div>
+  <div class="bar basic" data-skill="Rust"></div>
  
-  <div class="bar back basic" data-skill="Java"></div>
-  <div class="bar back basic" data-skill="JavaScript"></div>
-  <div class="bar back basic" data-skill="ReactJS"></div>
-  <div class="bar back basic" data-skill="NodeJS"></div>
-  
+  <div class="bar learning" data-skill="Java"></div>
+  <div class="bar learning" data-skill="JavaScript"></div>
+  <div class="bar learning" data-skill="ReactJS"></div>
+  <div class="bar learning" data-skill="NodeJS"></div>
+
   <div class="bar back learning" data-skill="C"></div>
+  <div class="bar back newbie" data-skill="C++"></div>
+  <div class="bar back learning" data-skill="C#"></div>
   <div class="bar back newbie" data-skill="asm"></div>
   <div class="bar back newbie" data-skill="VHDL"></div>
-  <div class="bar learning" data-skill="Solidity"></div>
-  <div class="bar learning" data-skill="C++"></div>
-  <div class="bar learning" data-skill="C#"></div>
+  
+
+  
   <div class="bar back newbie" data-skill="PHP"></div>
   <div class="bar back basic" data-skill="CSS3"></div>
   <div class="bar back basic" data-skill="HTML5"></div>
-  <div class="bar learning" data-skill="Selenium"></div>
+  <div class="bar back learning" data-skill="Selenium"></div>
 
 
 </div>
