add skill grades

--- a/views/about.html
+++ b/views/about.html
@@ -29,6 +29,7 @@
 </div>
 <div class="container">
   <h1>Skill Set</h1>
+  <h2> Core skills</h2>
   <div class="bar front expert" data-skill="English"></div>
   <div class="bar front expert" data-skill="Russian"></div>
   <div class="bar front learning" data-skill="Azure"></div>
@@ -42,14 +43,17 @@
 
   <div class="bar front advanced" data-skill="Python"></div>
   <div class="bar front basic" data-skill="Ruby"></div>
+
+  <h2> Learning... </h2>
   <div class="bar newbie" data-skill="Solidity"></div>
   <div class="bar basic" data-skill="Rust"></div>
  
-  <div class="bar learning" data-skill="Java"></div>
+
   <div class="bar learning" data-skill="JavaScript"></div>
   <div class="bar learning" data-skill="ReactJS"></div>
   <div class="bar learning" data-skill="NodeJS"></div>
-
+  <h2> Secondary competencies </h2>
+  <div class="bar back learning" data-skill="Java"></div>
   <div class="bar back learning" data-skill="C"></div>
   <div class="bar back newbie" data-skill="C++"></div>
   <div class="bar back learning" data-skill="C#"></div>
@@ -62,6 +66,8 @@
   <div class="bar back basic" data-skill="CSS3"></div>
   <div class="bar back basic" data-skill="HTML5"></div>
   <div class="bar back learning" data-skill="Selenium"></div>
+  <div class="bar back learning" data-skill="Hadoop"></div>
+  <div class="bar back learning" data-skill="ML"></div>
 
 
 </div>
