--- a/views/about.html
+++ b/views/about.html
@@ -33,13 +33,13 @@
   <div class="bar front expert" data-skill="English"></div>
   <div class="bar front expert" data-skill="Russian"></div>
   <div class="bar front learning" data-skill="Azure"></div>
- 
   <div class="bar front intermediate" data-skill="AWS"></div>
-  <div class="bar front expert" data-skill="DevOps"></div>
+  <div class="bar front intermediate" data-skill="k8s"></div>
   <div class="bar front intermediate" data-skill="Linux"></div>
   <div class="bar front intermediate" data-skill="GitlabCI"></div>
   <div class="bar front intermediate" data-skill="Jenkins"></div>
   <div class="bar front intermediate" data-skill="Testing"></div>
+  <div class="bar front expert" data-skill="DevOps"></div>
 
   <div class="bar front advanced" data-skill="Python"></div>
   <div class="bar front basic" data-skill="Ruby"></div>
