added rancher bar

--- a/views/about.html
+++ b/views/about.html
@@ -35,6 +35,7 @@
   <div class="bar front learning" data-skill="Azure"></div>
   <div class="bar front intermediate" data-skill="AWS"></div>
   <div class="bar front intermediate" data-skill="k8s"></div>
+  <div class="bar front intermediate" data-skill="k3s"></div>
   <div class="bar front intermediate" data-skill="Linux"></div>
   <div class="bar front intermediate" data-skill="GitlabCI"></div>
   <div class="bar front intermediate" data-skill="Jenkins"></div>
